# lge-compiler

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: ast.h  codegen.h  lexer.h  parser.h
runtime/: CMakeLists.txt  lge_runtime.c
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: create_test_case.sh  run.py  suite.json
tests/examples/: arithmetic.lge  complex.lge  exit_-100.lge  fact.lge  float_addition.lge  float_division.lge  float_multiplication.lge  float_subtraction.lge  hello_world.lge  input.lge  int_addition.lge  int_division.lge  int_multiplication.lge  int_subtraction.lge  new_line.lge  str_cmp.lge  str_len.lge  str_sub.lge
tests/snapshots/: float_addition_stdout.txt  float_subtraction_stdout.txt  input_stdin.txt  input_stdout.txt  new_line_stdout.txt  str_cmp_stdout.txt
